Corrected font overlap in search box

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -57,7 +57,5 @@ div{
 	left:35%;
 }
 
-#query{
-	font-size: 14px;
-}
+
 
